[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/script_interagiveis_de_fase/mesa_fase_4.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 111.272

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "table_break",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "idlle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 138.371

[node name="mesa_fase_4" type="RigidBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="mesa_animation" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "table_break"

[node name="mesa_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mesa_area"]
shape = SubResource( 3 )
[connection signal="animation_finished" from="mesa_animation" to="." method="_on_mesa_animation_animation_finished"]
[connection signal="area_shape_entered" from="mesa_area" to="." method="_on_mesa_area_area_shape_entered"]
